--- a/lab3/first_task/CMakeLists.txt
+++ b/lab3/first_task/CMakeLists.txt
@@ -4,13 +4,15 @@ project(LAB3_1)
 
 file(GLOB CPP_SOURCES
   "src/*.cpp",
-  "src/Heap/*.cpp"
-  "src/Sorts/*.cpp"
+  "src/Heap/*.cpp",
+  "src/Sorts/*.cpp",
+  "src/Counter/*.cpp"
 )
 
 include_directories(${LAB3_1_SOURCE_DIR}/src/)
 include_directories(${LAB3_1_SOURCE_DIR}/src/Heap)
 include_directories(${LAB3_1_SOURCE_DIR}/src/Sorts)
+include_directories(${LAB3_1_SOURCE_DIR}/src/Counter)
 
 include_directories("${PROJECT_SOURCE_DIR}/src")
 
