--- a/lab3/second_task/CMakeLists.txt
+++ b/lab3/second_task/CMakeLists.txt
@@ -6,14 +6,13 @@ file(GLOB CPP_SOURCES
   "src/*.cpp",
   "src/RedBlackTree/*.cpp",
   "src/HashMap/*.cpp",
-  "src/LinkedList/*.cpp",
+  "src/LinkedList/*.cpp"
 )
 
 include_directories(${PROJECT_SOURCE_DIR}/src/)
 include_directories(${LAB3_2_SOURCE_DIR}/src/RedBlackTree)
 include_directories(${LAB3_2_SOURCE_DIR}/src/HashMap)
 include_directories(${LAB3_2_SOURCE_DIR}/src/LinkedList)
-include_directories(${LAB3_2_SOURCE_DIR}/src/Data)
 
 include_directories("${PROJECT_SOURCE_DIR}/src")
 
